--- a/2. Project.md
+++ b/2. Project.md
@@ -2,25 +2,105 @@
 
 嵌入式开发中学习了解到的一些优秀开源项目
 
-RT-Thread:
+## 1.RT-Thread
 
-FreeRTOS:
+RT-Thread（Real-Time Thread）是一款面向嵌入式系统的开源实时操作系统（RTOS），专为嵌入式应用而设计，具有高性能、低功耗和小内存占用的特点。RT-Thread采用了多线程的方式，支持多任务并发执行，提供了丰富的软件组件和协议栈，使开发者可以快速构建各种嵌入式应用。
 
-cJson:
+项目主页：<https://gitee.com/rtthread/rt-thread>
 
-Letter-shell:
+## 2. FreeRTOS
 
-EasyLogger:
+FreeRTOS（Free Real-Time Operating System）是一款免费、开源、实时操作系统（RTOS），专门设计用于嵌入式系统。FreeRTOS提供了一种基于优先级的任务调度器，用于在嵌入式系统中管理多个并发任务的执行。它采用了协作式的任务调度方式，即任务需要显式地让出CPU控制权，而不是通过硬件定时器中断强制切换。FreeRTOS提供了丰富的功能，包括任务管理、信号量、消息队列、事件标志、定时器、互斥量、软件定时器、内存管理等，使得开发者能够构建复杂的嵌入式应用系统。同时，FreeRTOS还支持多种处理器架构，包括ARM、MIPS、RISC-V、X86等，从而适用于广泛的硬件平台。
 
-FlashDB:
+项目主页：<https://github.com/FreeRTOS/FreeRTOS>
 
-SFUD:
+## 3. Letter-shell
 
-FreeModbus:
+Letter-shell是一个简单的命令行界面（CLI）工具，用于在嵌入式系统中实现与用户的交互。它提供了一个轻量级的命令行解释器，允许用户通过命令输入和输出与嵌入式系统进行交互。Letter-shell支持自定义命令和参数的注册，用户可以通过命令行输入来执行不同的操作，如读写设备寄存器、配置系统参数、查询状态等。Letter-shell通常用于嵌入式系统中需要与用户进行交互的应用，如调试、配置、测试等。
 
-Libmodbus:
+项目主页：<https://github.com/ebbchar/letter-shell>
 
-lwip:
+## 4. EasyLogger
 
+EasyLogger是一个用于嵌入式系统的简单易用的日志记录工具。它提供了一个轻量级的日志记录器，用于在嵌入式系统中记录日志信息。EasyLogger支持多种日志级别（如调试、信息、警告、错误等），可以在运行时根据需要进行配置。它还支持多种输出方式，如串口、文件、网络等，方便用户在不同的应用场景中进行日志记录和调试。EasyLogger通常用于嵌入式系统中的调试和故障排除，帮助开发者快速定位和解决问题。
 
+项目主页：<https://github.com/armink/EasyLogger>
+
+## 5. FlashDB
+
+FlashDB是一个用于嵌入式系统的轻量级嵌入式数据库工具。它基于键值对（Key-Value）的存储模型，支持在嵌入式系统中进行数据的持久化存储和检索。FlashDB的数据存储在闪存（Flash）或EEPROM等非易失性存储介质中，具有高效、低功耗和可靠的特点。FlashDB提供了简单的API接口，方便用户进行数据的读写操作，支持事务和多种查询操作。FlashDB通常用于需要在嵌入式系统中进行数据持久化存储和检索的应用，如配置保存、日志存储、状态管理等。
+
+项目主页：<https://github.com/ferenc-nemeth/FlashDB>
+
+## 6. SFUD
+
+SFUD（Serial Flash Universal Driver）是一款用于嵌入式系统的开源串行闪存通用驱动库，用于简化嵌入式系统中串行闪存（如SPI闪存）的读写操作。SFUD提供了一种简单而灵活的方式来访问串行闪存，支持多种串行闪存芯片，包括但不限于Winbond、GD、MXIC、ISSI等。它提供了一套通用的API接口，使开发者可以在不同的嵌入式系统中轻松地进行串行闪存的读写操作，无需关注底层硬件的细节。
+
+项目主页：<https://github.com/armink/SFUD>
+
+## 7. Freemodbus
+
+FreeModbus是一款开源的Modbus协议栈实现，用于在嵌入式系统中实现Modbus通信协议。它支持多种传输方式，包括串口（RS232、RS485）、以太网（TCP/IP、UDP）等，具有简单易用的API接口和配置选项，高性能且可移植性强。FreeModbus被广泛应用于工业自动化、智能家居、能源管理等领域。
+
+项目主页：<https://www.freemodbus.org/>
+
+## 8. Libmodbus
+
+libmodbus是一款开源的Modbus通信协议库，用于在嵌入式系统和计算机应用中实现Modbus通信功能。它支持多种传输方式，包括串口（RS232、RS485）、以太网（TCP/IP、UDP）等，具有丰富的功能和灵活的配置选项。libmodbus提供了简单易用的API接口，高性能且可移植性强，被广泛应用于工业自动化、智能家居、能源管理等领域。
+
+项目主页：<https://libmodbus.org/>
+
+## 9. Lwip
+
+LwIP是一款轻量级的开源嵌入式TCP/IP协议栈，用于在嵌入式系统中实现网络通信功能。它提供了一套完整的TCP/IP协议栈，包括IPv4和IPv6协议、TCP和UDP协议、DNS解析、ARP协议等，并且具有小内存占用和高性能的特点。LwIP支持多种硬件平台和操作系统，被广泛应用于嵌入式系统和网络设备中。
+
+项目主页：<https://savannah.nongnu.org/projects/lwip/>
+
+## 10. tinyhttpd
+
+tinyhttpd是一款轻量级的开源HTTP服务器，用于在嵌入式系统中实现基本的Web服务器功能。它采用C语言编写，代码简洁且易于理解，适合在资源受限的嵌入式系统中运行。tinyhttpd支持HTTP/1.1协议，包括GET、POST等常用的HTTP方法，具有简单的配置选项和扩展接口。
+
+项目地址：<http://sourceforge.net/projects/tinyhttpd/>
+
+## 11. cJSON
+
+cJSON是一款轻量级的开源C语言JSON解析器，用于在嵌入式系统中解析和生成JSON数据。它采用简洁的API接口和高性能的解析算法，适用于资源受限的嵌入式系统。cJSON支持标准的JSON语法，包括JSON对象、JSON数组、字符串、数字、布尔值等，并且具有简单易用的API接口和配置选项。
+
+项目主页：<http://sourceforge.net/projects/cjson/>
+
+## 12. jansson
+
+jansson是一款开源的C语言JSON解析器和生成器，用于解析和生成JSON数据。它具有简单易用的API接口和丰富的功能，支持标准的JSON语法，包括JSON对象、JSON数组、字符串、数字、布尔值等。jansson支持高性能的JSON数据处理，适用于各种嵌入式和非嵌入式系统。
+
+项目主页：<https://github.com/akheron/jansson>
+
+## 13. libevent
+
+libevent是一款开源的事件驱动网络编程库，用于在异步网络应用中处理事件驱动的编程模型。它提供了高性能、跨平台的事件驱动编程接口，支持多种网络协议，包括TCP、UDP、HTTP等。libevent具有简单易用的API接口和丰富的功能，适用于构建高性能、可扩展的网络应用。
+
+项目主页：<https://libevent.org/>
+
+## 14. Mosquitto
+
+mosquitto是一款开源的MQTT（Message Queuing Telemetry Transport）协议实现，用于构建物联网（IoT）中的消息传递系统。它提供了MQTT协议的客户端和服务器实现，支持多种平台，包括Linux、Windows、Mac OS等，具有简单易用的API接口和丰富的功能。
+
+项目主页：<https://mosquitto.org/>
+
+## 15. uFTP
+
+uFTP服务器是一个开源的，可移植的，轻量级的FTP服务器，用C编写，适用于Unix / Linux和POSIX兼容操作系统, uFTP服务器易于安装和配置。
+
+项目主页：<https://www.uftpserver.com/>
+
+## 16. Melon
+
+C语言组件库，包括数据结构和算法实现
+
+项目主页：<https://github.com/Water-Melon/Melon>
+
+## 17. Mbedtls
+
+mbedTLS是一款开源的轻量级加密和安全通信库，原名为PolarSSL。它被设计为适用于嵌入式系统和资源受限的环境，提供了各种加密算法和安全协议的实现，包括传输层安全（TLS）、安全套接层（SSL）、加密哈希函数（例如SHA-256、SHA-1）、对称加密（例如AES、DES）、公钥加密（例如RSA、ECC）等。
+
+项目主页：<https://tls.mbed.org/>
 
