--- a/3. Tool.md
+++ b/3. Tool.md
@@ -1,38 +1,40 @@
-
-
 # Embedded-Develop-Tools
 
-嵌入式开发中用到的一些软件工具集
+嵌入式开发中常用的软件工具集
 
 -----------------------------
+
+[toc]
 
 ## 一、串口调试
 
 ### 串口收发
 
+串口调试助手
 Xcom:<http://www.openedv.com/forum.php?mod=viewthread&tid=279749>
-
 Sscom:<http://www.daxia.com>
-
 UartAssist:<http://www.cmsoft.cn/resource/101.html>
 
 LLCOM:<https://gitee.com/chenxuuu/llcom>
+带Lua解释器的串口调试助手
 
 ### 串口终端
 
+串口shell交互软件
 MobaXterm:<https://mobaxterm.mobatek.net/download.html>
-
 SecureCRT:<https://www.vandyke.com/cgi-bin/releases.php?product=securecrt>
-
 NxShell:<https://nxshell.github.io/>
+Xshell:<https://www.xshell.com/zh/xshell/>
 
 ### 虚拟串口
 
 VSPD:<http://www.cmsoft.cn/resource/291.html>
+可以在没有硬件设备下调试串口程序
 
 ### 串口监控
 
-CommMonitor 串口监控精灵:<http://www.ceiwei.com/mt/>
+CommMonitor:<http://www.ceiwei.com/mt/>
+监听连接电脑串口的报文交互
 
 ## 二、网络调试
 
@@ -47,35 +49,45 @@ NetAssist:<http://www.cmsoft.cn/resource/102.html>
 ### HTTP
 
 Postman:<https://www.postman.com/downloads/>
+Apipost:<https://www.apipost.cn/>
 
 ### MQTT
 
 MQTTX:<https://mqttx.app/zh>
-
 MQTT.fx:<https://mqttfx.jensd.de/index.php/download>
 
 ### MODBUS
 
 Modbus Poll:<https://modbustools.com/download.html>
+Modbus主机模拟器
 
 Modbus Slave:<https://modbustools.com/download.html>
+Modbus从机模拟器
 
 MThings:<https://blog.csdn.net/zhoutanliang/article/details/106459315>
+国产软件，可同时支持主从机模拟
 
 ## 三、文件编辑
 
+常用的文件编辑器，方便查看日志
 Notepad++:<https://notepad-plus.en.softonic.com/>
+Notepad--:<https://gitee.com/cxasm/notepad-->
 
 Markdown编辑器 
 Marktext:<https://github.com/marktext/marktext/releases>
+typora:<https://typoraio.cn/>
 
 代码比对
 Meld:<http://meldmerge.org/>
+Beyond Compare:<https://www.beyondcomparepro.com/>
 
 HEX编辑器
 Hex Editor Neo:<https://www.hhdsoftware.com/free-hex-editor>
 
-## 代码编辑
+## 四、代码编辑
+
+Keil MDK:<https://www.myir-tech.com/customerService/download.asp?nclassid=108&anclassid=71>
+MDK-ARM软件为基于Cortex-M、Cortex-R4、ARM7、ARM9处理器设备提供了一个完整的开发环境
 
 VsCode:<https://code.visualstudio.com/>
 常见的代码编辑器，通过丰富的插件生态可支持多样需求
@@ -85,3 +97,9 @@ VsCode:<https://code.visualstudio.com/>
 
 TscanCode:<https://github.com/Tencent/TscanCode>
 C/C++/Lua静态代码扫描工具，腾讯开源，在win下有UI界面，简单易用
+
+Git:<https://git-scm.com/download/win>
+开源的分布式版本控制系统，用于敏捷高效地处理任何或小或大的项目
+
+TortoiseGit:<https://tortoisegit.org/>
+Git GUI客户端
