--- a/3. Tool.md
+++ b/3. Tool.md
@@ -65,7 +65,22 @@ Modbus Slave:<https://modbustools.com/download.html>
 Modbus从机模拟器
 
 MThings:<https://blog.csdn.net/zhoutanliang/article/details/106459315>
-国产软件，可同时支持主从机模拟
+国产软件，可同时模拟主从机
+
+### SSH终端
+
+MobaXterm:<https://mobaxterm.mobatek.net/download.html>
+SecureCRT:<https://www.vandyke.com/cgi-bin/releases.php?product=securecrt>
+NxShell:<https://nxshell.github.io/>
+Xshell:<https://www.xshell.com/zh/xshell/>
+
+### OPCUA
+
+Prosys OPCUA:<http://www.prosysopc.cn/products/opc-ua-monitor/>
+OPCUA Server软件
+
+OPCUA Expert:<https://www.unified-automation.com/downloads.html>
+OPCUA Client软件
 
 ## 三、文件编辑
 
@@ -84,7 +99,7 @@ Beyond Compare:<https://www.beyondcomparepro.com/>
 HEX编辑器
 Hex Editor Neo:<https://www.hhdsoftware.com/free-hex-editor>
 
-## 四、代码编辑
+## 四、代码开发
 
 Keil MDK:<https://www.myir-tech.com/customerService/download.asp?nclassid=108&anclassid=71>
 MDK-ARM软件为基于Cortex-M、Cortex-R4、ARM7、ARM9处理器设备提供了一个完整的开发环境
